<?xml version="1.0" encoding="utf-8"?>

<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.NewPetFragment">
<data>
    <variable
        name="MyPetsViewModel"
        type="com.example.android.kotlinproject1.MyPetsViewModel"/>
    <variable
        name="pet"
        type="com.example.android.kotlinproject1.models.Pet"/>
</data>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/new_pet_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="@font/mclaren"
                android:padding="16dp"
                android:text="@string/add_your_new_pet"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.024" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_pet_title_text"
                app:layout_constraintVertical_bias="0.0">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_weight="1"
                        android:fontFamily="@font/mclaren"
                        android:text="Name"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_weight="1"
                        android:fontFamily="@font/mclaren"
                        android:text="DOB"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/nameTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginHorizontal="16dp"
                        android:layout_weight="1"
                        android:autofillHints="Name"
                        android:fontFamily="@font/mclaren"
                        android:hint="@string/their_name"
                        android:inputType="text"
                        android:textAlignment="center"
                        android:textSize="18sp"/>


                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_marginHorizontal="16dp"
                        android:layout_weight="1"
                        android:autofillHints="@string/dob_hint"
                        android:fontFamily="@font/mclaren"
                        android:hint="@string/their_date_of_birth"
                        android:inputType="text"
                        android:textAlignment="center"
                        android:textSize="18sp" />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_weight="1"
                        android:fontFamily="@font/mclaren"
                        android:text="Sex"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_weight="1"
                        android:fontFamily="@font/mclaren"
                        android:text="MC No."
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginHorizontal="16dp"
                        android:layout_weight="1"
                        android:autofillHints="sex"
                        android:fontFamily="@font/mclaren"
                        android:hint="male/female"
                        android:inputType="text"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_marginHorizontal="16dp"
                        android:layout_weight="1"
                        android:autofillHints="microchip number"
                        android:fontFamily="@font/mclaren"
                        android:hint="microchip"
                        android:inputType="text"
                        android:textAlignment="center"
                        android:textSize="18sp" />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_weight="1"
                        android:fontFamily="@font/mclaren"
                        android:text="Fav toy"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_weight="1"
                        android:fontFamily="@font/mclaren"
                        android:text="Fav food"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginHorizontal="16dp"
                        android:layout_weight="1"
                        android:autofillHints="@string/favourite_toy"
                        android:fontFamily="@font/mclaren"
                        android:hint="@string/favourite_toy"
                        android:inputType="text"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_marginHorizontal="16dp"
                        android:layout_weight="1"
                        android:autofillHints="@string/favourite_food"
                        android:fontFamily="@font/mclaren"
                        android:hint="@string/favourite_food"
                        android:inputType="text"
                        android:textAlignment="center"
                        android:textSize="18sp" />
                </TableRow>

            </TableLayout>


            <Button
                android:id="@+id/saveButton"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableLayout"
                app:layout_constraintVertical_bias="0.086" />

            <Button
                android:id="@+id/cancelButton"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="Cancel"
                app:layout_constraintBottom_toBottomOf="@+id/saveButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>